# Procedural-Rendering-Test

./: .gitignore  CMakeLists.txt  README.md
include/: shader.h
include/GLAD/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: glad.c  main.cpp
